2005-11-19 Niklas Knutsson  <nq@altern.org>

	* Do not display colon when argument description is empty

2005-11-17 Niklas Knutsson  <nq@altern.org>

	* Simplify menu item
	* Algebraic mode -- simplify, factorize, or none

2005-11-07 Niklas Knutsson  <nq@altern.org>

	* Fix crash when newline character at end of expression (from pasted text)
	* Do not add plot expression with only white space
	* Do not automatically add plot expression when applying appearance or function range
	* Replace new line characters in expression entry with space

2005-11-06 Niklas Knutsson  <nq@altern.org>

	* Fixes for gtk+ version 2.4

2005-11-05 Niklas Knutsson  <nq@altern.org>

	* Fix parenthesis for division in division

2005-11-04 Niklas Knutsson  <nq@altern.org>

	* Compile without warnings with -pedantic and -Wextra

2005-11-03 Niklas Knutsson  <nq@altern.org>

	* Fix cmath sqrt bug (gcc-3.3.x problem?)

2005-11-01 Niklas Knutsson  <nq@altern.org>

	* History enhancements

2005-10-31 Niklas Knutsson  <nq@altern.org>

	* Polishing

2005-10-30 Niklas Knutsson  <nq@altern.org>

	* Finish documentation updates
	* Completion fixes

2005-10-29 Niklas Knutsson  <nq@altern.org>

	* Update parse status display of to unit expression and parse display in history
	* Save history type information to restore formatting

2005-10-28 Niklas Knutsson  <nq@altern.org>

	* More result drawing enhancements
	* Use option to reduce transformation when parsing and print formating for parse status
	* Update recalculation behaviour on mode change
	* Support for binary and other prefixes

2005-10-27 Niklas Knutsson  <nq@altern.org>

	* Update documentation
	* Scale result if it does not fit window height
	* Save confirmation with gtk-2.8
	* Improved parenthesis drawing

2005-10-26 Niklas Knutsson  <nq@altern.org>

	* A better solution (set size request for result display again) for resizing window when
	  keypad or history are shown/hidden.
	* Update Swedish translation