@@ -1643,6 +1643,7 @@
 		      <signal name="activate" handler="on_expression_activate" last_modification_time="Sun, 10 Aug 2003 21:36:06 GMT"/>
 		      <signal name="changed" handler="on_expression_changed" after="yes" last_modification_time="Sun, 10 Aug 2003 21:45:20 GMT"/>
 		      <signal name="key_press_event" handler="on_expression_key_press_event" last_modification_time="Sun, 17 Aug 2003 07:34:36 GMT"/>
+		      <signal name="populate_popup" handler="on_expression_populate_popup" last_modification_time="Tue, 22 Nov 2005 12:31:13 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
@@ -2921,6 +2922,7 @@ Other...</property>
 			  <property name="right_margin">6</property>
 			  <property name="indent">0</property>
 			  <property name="text" translatable="yes"></property>
+			  <signal name="populate_popup" handler="on_history_populate_popup" last_modification_time="Tue, 22 Nov 2005 11:43:27 GMT"/>
 			</widget>
 		      </child>
 		    </widget>
