@@ -90,27 +90,6 @@
 	      </child>
 
 	      <child>
-		<widget class="GtkCheckButton" id="preferences_checkbutton_enable_completion">
-		  <property name="visible">True</property>
-		  <property name="tooltip" translatable="yes">If completion shall be enabled in for the expression entry</property>
-		  <property name="can_focus">True</property>
-		  <property name="label" translatable="yes">Enable completion</property>
-		  <property name="use_underline">True</property>
-		  <property name="relief">GTK_RELIEF_NORMAL</property>
-		  <property name="focus_on_click">True</property>
-		  <property name="active">True</property>
-		  <property name="inconsistent">False</property>
-		  <property name="draw_indicator">True</property>
-		  <signal name="toggled" handler="on_preferences_checkbutton_enable_completion_toggled" last_modification_time="Sat, 22 Oct 2005 20:21:37 GMT"/>
-		</widget>
-		<packing>
-		  <property name="padding">0</property>
-		  <property name="expand">False</property>
-		  <property name="fill">False</property>
-		</packing>
-	      </child>
-
-	      <child>
 		<widget class="GtkCheckButton" id="preferences_checkbutton_fetch_exchange_rates">
 		  <property name="visible">True</property>
 		  <property name="tooltip" translatable="yes">If current exchange rates shall be downloaded from the internet at program start</property>
